[gd_scene load_steps=43 format=2]

[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat3.png" type="Texture" id=1]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P2/PowerFail4.png" type="Texture" id=2]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat9.png" type="Texture" id=3]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat8.png" type="Texture" id=4]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P2/PowerFail2.png" type="Texture" id=5]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat10.png" type="Texture" id=6]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat6.png" type="Texture" id=7]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat4.png" type="Texture" id=8]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat5.png" type="Texture" id=9]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat7.png" type="Texture" id=10]
[ext_resource path="res://Rooms/Game-Over/PressureMax/P2/Pressure Max.png" type="Texture" id=11]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P2/PowerFail1.png" type="Texture" id=12]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P2/PowerFail3.png" type="Texture" id=13]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat1.png" type="Texture" id=14]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P2/PowerFail5.png" type="Texture" id=15]
[ext_resource path="res://Rooms/Game-Over/Overheat/P2/Overheat2.png" type="Texture" id=16]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P1/PowerFail4.png" type="Texture" id=17]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P1/PowerFail5.png" type="Texture" id=18]
[ext_resource path="res://Rooms/Game-Over/PressureMax/P1/Pressure Max.png" type="Texture" id=19]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat3.png" type="Texture" id=20]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat9.png" type="Texture" id=21]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat1.png" type="Texture" id=22]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat10.png" type="Texture" id=23]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat8.png" type="Texture" id=24]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P1/PowerFail1.png" type="Texture" id=25]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat6.png" type="Texture" id=26]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat7.png" type="Texture" id=27]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P1/PowerFail2.png" type="Texture" id=28]
[ext_resource path="res://Rooms/Game-Over/PowerFail/P1/PowerFail3.png" type="Texture" id=29]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat5.png" type="Texture" id=30]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat2.png" type="Texture" id=31]
[ext_resource path="res://Rooms/Game-Over/Overheat/P1/Overheat4.png" type="Texture" id=32]
[ext_resource path="res://Rooms/Tutorial/Buttons/Tutorial X1.png" type="Texture" id=33]
[ext_resource path="res://Rooms/Tutorial/Buttons/Tutorial X2.png" type="Texture" id=34]
[ext_resource path="res://Objects/Tiles/Sparks.png" type="Texture" id=35]
[ext_resource path="res://Rooms/Game-Over/GameOver.gd" type="Script" id=36]
[ext_resource path="res://Sounds/Overheat.wav" type="AudioStream" id=37]
[ext_resource path="res://Sounds/Powerout.wav" type="AudioStream" id=38]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 31 ), ExtResource( 20 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 23 ) ],
"loop": false,
"name": "OverHeat",
"speed": 2.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "PowerFail",
"speed": 1.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "PressureMax",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": false,
"name": "OverHeat",
"speed": 2.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 15 ) ],
"loop": false,
"name": "PowerFail",
"speed": 1.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "PressureMax",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0335196, 0.204301, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.0705882, 1, 1, 1, 0 )

[node name="GameOver" type="Node2D"]

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 160, 120 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Node2D" type="Node2D" parent="ViewportContainer/Viewport"]
script = ExtResource( 36 )

[node name="P1" type="AnimatedSprite" parent="ViewportContainer/Viewport/Node2D"]
visible = false
position = Vector2( 80, 60 )
frames = SubResource( 1 )
animation = "PressureMax"

[node name="P2" type="AnimatedSprite" parent="ViewportContainer/Viewport/Node2D"]
visible = false
position = Vector2( 80, 60 )
frames = SubResource( 2 )
animation = "PowerFail"
frame = 1

[node name="TextureButton" type="TextureButton" parent="ViewportContainer/Viewport/Node2D"]
margin_left = 148.0
margin_top = 1.0
margin_right = 159.0
margin_bottom = 12.0
texture_normal = ExtResource( 33 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 34 )
texture_disabled = ExtResource( 33 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="ViewportContainer/Viewport/Node2D"]
visible = false
modulate = Color( 0, 0.94902, 1, 1 )
self_modulate = Color( 0, 0.94902, 1, 1 )
material = SubResource( 3 )
position = Vector2( 65, 94 )
scale = Vector2( 2, 2 )
amount = 10
speed_scale = 8.0
texture = ExtResource( 35 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 18.87
initial_velocity_random = 0.64
angular_velocity_random = 1.0
orbit_velocity = 67.74
radial_accel = 33.96
radial_accel_random = 1.0
color = Color( 0, 0.94902, 1, 1 )
color_ramp = SubResource( 4 )

[node name="OverHeat" type="AudioStreamPlayer" parent="ViewportContainer/Viewport/Node2D"]
stream = ExtResource( 37 )

[node name="PowerFail" type="AudioStreamPlayer" parent="ViewportContainer/Viewport/Node2D"]
stream = ExtResource( 38 )

[connection signal="pressed" from="ViewportContainer/Viewport/Node2D/TextureButton" to="ViewportContainer/Viewport/Node2D" method="_on_TextureButton_pressed"]
